# sql_agent

./: .env.example  README.md  app.py  config.py  main.py  pyproject.toml
sql_agent/: __init__.py  config.py  factory.py  guardrails.py  interfaces.py  orchestrator.py
sql_agent/adapters/: __init__.py  database.py  llm.py
web/: index.html
web/assets/: app.js  styles.css
